--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/openai": "^1.0.0",
     "@ai-sdk/xai": "^1.0.0",
     "@auth/mongodb-adapter": "^3.9.1",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "ai": "^4.0.0",
