rebrand to atlas ai

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ai-chat-app",
+  "name": "atlas-ai",
   "version": "0.1.0",
   "private": true,
+  "description": "Atlas AI - Advanced multi-provider AI chat application",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
