--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "ai": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
